--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
 
         --color-button-disabled: #374151;
         --color-text-disabled: #6b7280;
+
+        --color-primary-divider: #646363;
     }
 }
 
